src/style.css
/* ... */
/* Mobile screen breakpoint */
@media (max-width: 768px) {
  /* NOTE: Make vertical space for user & computer avatars on mobile screens */
  .game-wrapper {
    margin-top: 110px !important;
    margin-bottom: 100px !important;
  }
  .app-avatar.app-avatar-user {
    left: 0;
    bottom: -110px;
  }
  .app-avatar.app-avatar-computer {
    right: 0;
    top: -95px;
  }

  .avatar-xl {
    height: 58px;
    width: 58px;
  }
  .sm\:font-l {
    font-size: 16px !important;
  }
}

